@@ -1,8 +1,8 @@
 DIST iso-codes-3.10.tar.bz2 5351303 RMD160 baca11224b8bcf241c59383400d937d3f115c1c3 SHA1 6eba71d4bb19ccd3f9c84cb11e0af708532d00ae SHA256 ae33db43ed7b325754f4887ff53adac1fb2978eae71aadeda511a4c1f9e71274
+DIST iso-codes-3.11.1.tar.bz2 5588342 RMD160 738cfca7768e6c1cfd56f02ec39936d2da400fa0 SHA1 62944b6a5a41bfc45e1e340b9723c336b96bc428 SHA256 64ff90a9b96bfdc2e29da1b8431827ab59219b4295d4ff55f529fbe6e1750181
 DIST iso-codes-3.8.tar.bz2 5323027 RMD160 36ca00481e99c28e958ab85ece7cebfe3c332b51 SHA1 8a62219c7c5eafae0b65b58a61ec4a818fb178c3 SHA256 4cc4c3791f8f569af41b40835080b4b8b0c9305efd1ffebacebb576c518007a0
-DIST iso-codes-3.9.tar.bz2 5341785 RMD160 085b15e219597f0e16526d51badd7e53e238b5d5 SHA1 87eca521ce21170291fdf692daabe073ab745d82 SHA256 3d78bf6273c317d332ec5d35cb38214216fa2c3bb073626ae36f0b81aca0c158
-EBUILD iso-codes-3.10.ebuild 756 RMD160 4b4fea970a85b7688070c4531120367f2e6854a1 SHA1 90243547d008a6954e6bc13a358aeeea86206f09 SHA256 0ee0fa6bd651cbce6933f3f507a290bf847c6d99b14ea996be0420958d952e38
+EBUILD iso-codes-3.10.ebuild 759 RMD160 bce30dbd82713fb69d9610dcdb23857fc8fafe66 SHA1 61252bdc9989b7ec7aeee192fd8cfd472f81767e SHA256 ecea97d87827c90d38e5d66098c165ad1eefdb0aa199f11b3b91a7176e525c04
+EBUILD iso-codes-3.11.1.ebuild 780 RMD160 9bc0e11b6c504dc9a3e99ee44b7b3a01751a4d18 SHA1 7489010d6b8afd96bfc8d63e0a67e1b6f91aeb44 SHA256 47643d9dd034ef333f7d00e434d58d476e6fd5ab0c8de772e126d15330db6a63
 EBUILD iso-codes-3.8.ebuild 758 RMD160 10a3e9bd57e41a662b04d397b9d69fe880c7a797 SHA1 6b6af6a9892c09ffaed16d5785f2985338304e85 SHA256 294fe79204fad348459177ffdba5aa07f777de13e6224fe1001e560e4712b1eb
-EBUILD iso-codes-3.9.ebuild 755 RMD160 4a1fdc76f09e8ec94a0657f04229c90a0371f895 SHA1 dc8689524bbe3b702e869617feadfcd521e3e38d SHA256 f302d1a0581c805c19553b46873858987944eece226730a7ebb893b34df6b749
-MISC ChangeLog 9907 RMD160 d84f9ba85003aed813843511b82e4442deeebd29 SHA1 a8444d0365b407860fdc5555a3e095b3f02cbdee SHA256 08a268109cb66fd1054d58a063695a7893bd3f1db6b997717229726dbf1b048d
+MISC ChangeLog 10190 RMD160 96c763b83c731f0e653c0c680e3b167136ffb9bc SHA1 ee04cdb8363721a3c4efd3a1541368891e496afb SHA256 a9c6df5fa6ddca76295ee73b4788163170ac45f1ecaccc4e8862f1cf2a6c1648
 MISC metadata.xml 387 RMD160 110fb26a8d959cfaa9ded0d5aaf4f3f26860eb66 SHA1 90b5f3b6d4b059b26db56f689f494a854b79f216 SHA256 d5252ca9dce95b72fa3153d212126bfa4594a1cf6868bff0dc205e46891a05e8
