@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/iso-codes-3.10.ebuild,v 1.1 2009/08/31 21:17:45 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/iso-codes-3.10.ebuild,v 1.2 2009/11/02 21:46:47 maekke Exp $
 
 EAPI=2
 
